fixed a few bugs. Changed tooltip to the left side of the mouse so it never goes off screen (particularly in the text columns at the end). Added back sort by tree functionality. Sorted out all remaining svg size bugs.

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -210,10 +210,15 @@ ul.nav.navbar-nav{
   fill:#ececec;
 }
 
+.menu text{
+  pointer-events: none;
+}
+
 .familyBar{
   // width:5px;
-  stroke-width: 5px;
+  stroke-width: 3px;
   stroke:rgb(25, 25, 25);
+  stroke-dasharray: 5px;
   // fill:rgb(25, 25, 25);
 }
 
